--- a/installs/default/change-proxy-deployment.yaml
+++ b/installs/default/change-proxy-deployment.yaml
@@ -7,10 +7,10 @@ metadata:
   namespace: kong
 spec:
   replicas: 1
-  template:
-    spec:
-      containers:
-        - name: proxy
-          env:
-            - name: KONG_ADMIN_LISTEN
-              value: 0.0.0.0:8444 reuseport backlog=16384
+  # template:
+  #   spec:
+  #     containers:
+  #       - name: proxy
+  #         env:
+  #           - name: KONG_ADMIN_LISTEN
+  #             value: 0.0.0.0:8444 reuseport backlog=16384
