--- a/installs/default/ingress.yaml
+++ b/installs/default/ingress.yaml
@@ -12,15 +12,30 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`api.hl.ancalagon.black`) && PathPrefix("/_kong-admin")
+      match: Host(`api-admin.hl.ancalagon.black`)
       priority: 10
       services:
         - name: kong-admin
           port: 8444
           scheme: https
+  tls:
+    certResolver: default
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: kong-proxy-ingress
+  annotations:
+    kubernetes.io/ingress.class: traefik-internal
+  labels:
+    traffic-type: internal
+spec:
+  entryPoints:
+    - websecure
+  routes:
     - kind: Rule
       match: Host(`api.hl.ancalagon.black`)
-      priority: 9
+      priority: 10
       services:
         - name: kong-proxy
           port: 80
