--- a/installs/default/ingress.yaml
+++ b/installs/default/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: kong-proxy-ingress
+  name: kong-proxy-admin-ingress
   annotations:
     kubernetes.io/ingress.class: traefik-internal
   labels:
